Set lager console logging to debug level

--- a/conf/oacd/sys.config
+++ b/conf/oacd/sys.config
@@ -20,6 +20,10 @@
 ]},
 {sipxplugin, [
 	% {mongo_hostport, "127.0.0.1:27017"}
+]},
+{lager, [
+	{handlers, [
+		{lager_console_backend, [debug, true]}
+	]}
 ]}
-
 ].
