Add oacd_ouc env to sys.config

--- a/conf/oacd/sys.config
+++ b/conf/oacd/sys.config
@@ -21,6 +21,10 @@
 {sipxplugin, [
 	% {mongo_hostport, "127.0.0.1:27017"}
 ]},
+{oacd_ouc, [
+	{sipxconfig_rest_api, "http://oacddev.ezuce.com/sipxconfig/rest"},
+	{contact_info_resource, "/my/contact-information"}
+]},
 {lager, [
 	{handlers, [
 		{lager_console_backend, [debug, true]}
