Add root_uri to oacd_ouc env

--- a/conf/oacd/sys.config
+++ b/conf/oacd/sys.config
@@ -26,8 +26,9 @@
 	{contact_info_resource, "/my/contact-information"},
 	{frontend_debug, false},
 	% no trailing slash
-	{frontend_static_root, ""}
-	% {frontend_static_root, "http://oacddev.ezuce.com/openacd/static"}
+	{frontend_static_root, ""},
+	% {frontend_static_root, "http://oacddev.ezuce.com/openacd/static"},
+    {root_uri, ""}
 ]},
 {lager, [
 	{handlers, [
