--- a/conf/oacd/sys.config
+++ b/conf/oacd/sys.config
@@ -1,6 +1,5 @@
 [{oacd_core, [
-	{nodes, ['openacd@oacddev.ezuce.com']}
-	, {console_loglevel, info}
+	{console_loglevel, info}
 	, {logfiles, [{"/tmp/openacd.log", info}]}
 	%% Add plugins here
 	, {plugins, [oacd_freeswitch, oacd_web, oacd_ouc, sipxplugin]}
@@ -24,11 +23,11 @@
 {oacd_ouc, [
 	{sipxconfig_rest_api, "http://oacddev.ezuce.com/sipxconfig/rest"},
 	{contact_info_resource, "/my/contact-information"},
+	{root_uri, ""},
 	{frontend_debug, false},
 	% no trailing slash
-	{frontend_static_root, ""},
-	% {frontend_static_root, "http://oacddev.ezuce.com/openacd/static"},
-    {root_uri, ""}
+	{frontend_static_root_uri, ""}
+	% {frontend_static_root_uri, "http://oacddev.ezuce.com/openacd/static"}
 ]},
 {lager, [
 	{handlers, [
